[package]
name = "rgb-backlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["blocking"] }
srgb = "0.3.2"
toml-cfg = "0.1.3"
x11cap = "0.4.1"
